turned game options into form

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
         <p>Congratulations on making it to the House Cup Championship at Hogwarts! <span class="opponent"></span> has been working as hard as your House. This game is ought to be a nail-biter!</p> <br><br><p><span class ="clickhere" id="start">START GAME</span></p>
     </div>
 
+    <div class="game"></div>
+
     <div class="win">
     <h2>VICTORY!!</h2>
         <p>You win!!! Dumbledore is planning to honor you as team MVP and congratulate your entire House for a remarkable year at the End-of-the-Year Feast! Way to go!<br><br><span id="refresh" class="clickhere">NEW GAME</span></p>
