changed refresh from id to class

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 
     <div class="win">
     <h2>VICTORY!!</h2>
-        <p>You win!!! Dumbledore is planning to honor you as team MVP and congratulate your entire House for a remarkable year at the End-of-the-Year Feast! Way to go!<br><br><span id="refresh" class="clickhere">NEW GAME</span></p>
+        <p>You win!!! Dumbledore is planning to honor you as team MVP and congratulate your entire House for a remarkable year at the End-of-the-Year Feast! Way to go!<br><br><span class="refresh clickhere">NEW GAME</span></p>
     </div>
 
     <div class="loss">
     <h2>GAME OVER</h2>
-        <p>As the game ends, Mada'am Hooch acknowledges you for a job well-done this year. Head to your Common Room and get ready for the End-of-the-Year Feast. You may have lost the game, but at least there will be pumpkin juice!<br><br><span id="refresh" class="clickhere">NEW GAME</span></p>
+        <p>As the game ends, Mada'am Hooch acknowledges you for a job well-done this year. Head to your Common Room and get ready for the End-of-the-Year Feast. You may have lost the game, but at least there will be pumpkin juice!<br><br><span class="refresh clickhere">NEW GAME</span></p>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
          <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
