--- a/index.html
+++ b/index.html
@@ -11,19 +11,16 @@
     <p class="instruct">Forms will guide you through your life at hogwarts! Wizards are excessively bureaucratic.</p>
   </header>
   <main>
-    <section class="landing" data-step="0">
 
+    <section class="header">
+        <h1>Welcome to Hogwarts</h1>
+        <p>You’ve been sorted by the Sorting Hat and drafted by your House as the Quidditch team’s new Seeker! You and your House team made it to the House Cup Championship. Dodge bludgers, curses, and other players. Remember, the Seeker who catches the Golden Snitch wins their team 150 points and ends the game! Good luck.</p>
+        <button data-brackets-id="12" id="sorted" class="clickhere">Click here to start!</button>
     </section>
 
-    <div class="header">
-    <h1>Welcome to Hogwarts</h1>
-        <p>You’ve been sorted by the Sorting Hat and drafted by your House as the Quidditch team’s new Seeker! You and your House team made it to the House Cup Championship. Dodge bludgers, curses, and other players. Remember, the Seeker who catches the Golden Snitch wins their team 150 points and ends the game! Good luck.<br><br></p>
-        <button data-brackets-id="12" id="sorted" class="clickhere">Click here to start!</button>
-    </div>
-
-<div class="sorting">
+<section class="sorting">
     <h2>The Sorting Ceremony</h2>
-    <p>Welcome to Hogwarts!The Sorting Hat has been adorned by every first-year student at the commencement of his or her academic career here. Your triumphs will earn your House points, your rule-breaking will deduct House points. Your House will be your home and your family.
+    <p>Welcome to Hogwarts!The Sorting Hat has been adorned by every first-year student at the commencement of his or her academic career here. Your triumphs will earn your House points, your rule-breaking will deduct House points. Your House will be your home and your family.</p>
 
     <form class="sorting-form">
         <fieldset class="sorting-form">
@@ -40,37 +37,41 @@
         </fieldset> 
     </form>
 
-    </div>
+    </section>
 
-     <div class="housephoto"></div>
+     <section class="housephoto"></section>
 
-    <div class="welcome">
-    <p><br><br><span id='flyClick' class="clickhere">Click here to attend your first flying lesson!</span></p>
-    </div>
+    <section class="welcome">
+        <br><br><button type="submit" id='flyClick' class="clickhere">Click here to attend your first flying lesson!</button>
+    </section>
 
+    <section class="flying">
+        <h2>Flying Lesson</h2>
+        <p class="lesson">Typical First-Years feel awkwardly uncoodrinated on a broomstick for the first time, but not you!</p>
+        <button type="submit" id="ready" class="clickhere">Click here when you're ready to play!</button>
+    </section>
 
+    <section class="match">
+        <h2>The Big Game!</h2>
+        <p>Congratulations on making it to the House Cup Championship at Hogwarts! <span class="opponent"></span> has been working as hard as your House. This game is ought to be a nail-biter!</p> 
+        <button type="submit" class ="clickhere" id="start">START GAME</button>
+    </section>
 
-    <div class="flying">
-    <h2>Flying Lesson</h2>
-        <p class="lesson">Typical First-Years feel awkwardly uncoodrinated on a broomstick for the first time, but not you!</p><p><span id="ready" class="clickhere">Click here when you're ready to play!</span></p>
-    </div>
+    <section class="game"></section>
 
-    <div class="match">
-    <h2>The Big Game!</h2>
-        <p>Congratulations on making it to the House Cup Championship at Hogwarts! <span class="opponent"></span> has been working as hard as your House. This game is ought to be a nail-biter!</p> <br><br><p><span class ="clickhere" id="start">START GAME</span></p>
-    </div>
+    <section class="results">
+        <div class="win">
+            <h2>VICTORY!!</h2>
+            <p>You win!!! Dumbledore is planning to honor you as team MVP and congratulate your entire House for a remarkable year at the End-of-the-Year Feast! Way to go!
+        </div>
 
-    <div class="game"></div>
+        <div class="loss">
+        <h2>GAME OVER</h2>
+            <p>As the game ends, Mada'am Hooch acknowledges you for a job well-done this year. Head to your Common Room and get ready for the End-of-the-Year Feast. You may have lost the game, but at least there will be pumpkin juice!</p>
+        </div>
+        <button type="submit" class="refresh clickhere">NEW GAME</button>
+    </section>
 
-    <div class="win">
-    <h2>VICTORY!!</h2>
-        <p>You win!!! Dumbledore is planning to honor you as team MVP and congratulate your entire House for a remarkable year at the End-of-the-Year Feast! Way to go!<br><br><span class="refresh clickhere">NEW GAME</span></p>
-    </div>
-
-    <div class="loss">
-    <h2>GAME OVER</h2>
-        <p>As the game ends, Mada'am Hooch acknowledges you for a job well-done this year. Head to your Common Room and get ready for the End-of-the-Year Feast. You may have lost the game, but at least there will be pumpkin juice!<br><br><span class="refresh clickhere">NEW GAME</span></p>
-    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
          <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 <script src="js/main.js" type="text/javascript"></script>
