added opponent logo and added scoreboard

--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
 
     </section>
 
-     <section class="housephoto"></section>
+     <section class="housephoto">
+         <div class="my-house"></div>
+            <span class="display-scores my-score"></span>
+         <div class="rival-house"></div>
+            <span class="display-scores rival-score"></span>
+     </section>
 
     <section class="welcome">
         <br><br><button type="submit" id='flyClick' class="clickhere">Click here to attend your first flying lesson!</button>
