cleaned up styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <h1>Quidditch</h1>          
-    <p class="instruct">Forms will guide you through your life at hogwarts! Wizards are excessively bureaucratic.</p>
+    <p class="instruct">Forms will guide you through your life at Hogwarts! Wizards are excessively bureaucratic.</p>
   </header>
   <main>
 
@@ -18,25 +18,9 @@
         <button data-brackets-id="12" id="sorted" class="clickhere">Click here to start!</button>
     </section>
 
-<section class="sorting">
-    <h2>The Sorting Ceremony</h2>
-    <p>Welcome to Hogwarts!The Sorting Hat has been adorned by every first-year student at the commencement of his or her academic career here. Your triumphs will earn your House points, your rule-breaking will deduct House points. Your House will be your home and your family.</p>
-
-    <form class="sorting-form">
-        <fieldset class="sorting-form">
-            <label for="sorting form">Where will you be sorted?<br></label>
-                <input type="radio" name="house" id="gryffindor" value="gryffindor" required>
-                    <label for="gryffindor">Gryffindor<br></label>
-                <input type="radio" name="house" id="slytherin" value="slytherin">
-                    <label for="slytherin">Slytherin<br></label>
-                <input type="radio" name="house" id="ravenclaw" value="ravenclaw">
-                    <label for="ravenclaw">Ravenclaw<br></label>
-                <input type="radio" name="house" id="hufflepuff" value="hufflepuff">
-                    <label for="hufflepuff">Hufflepuff<br></label>
-            <button type="submit" class="clickhere" id="sortClick">Submit</button> 
-        </fieldset> 
-    </form>
-
+    <section class="sorting">
+        <h2>The Sorting Ceremony</h2>
+        <p>Welcome to Hogwarts!The Sorting Hat has been adorned by every first-year student at the commencement of his or her academic career here. Your triumphs will earn your House points, your rule-breaking will deduct House points. Your House will be your home and your family.</p>
     </section>
 
      <section class="housephoto">
