--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
         <button type="submit" class="refresh clickhere">NEW GAME</button>
     </section>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 <script src="js/main.js" type="text/javascript"></script>
 </body>
 
